--- a/products.html
+++ b/products.html
@@ -72,12 +72,12 @@
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
 								<li><a href="index.html">HOME</a></li>
-								<li><a href="products.html">PRODUCTS</a></li>
-								<li class="has-dropdown active_2">
+								<li class="active_2"><a href="#">PRODUCTS</a></li>
+								<li class="has-dropdown">
 									<a href="services.html">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
-										<li><a href="#">Massages</a></li>
+										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
@@ -102,8 +102,7 @@
 						<div class="col-xs-12">
 							<ul class="breadcrumb">
 								<li> Home</li>
-								<li> Services</li>
-								<li> Massages</li>
+								<li> Products</li>
 							</ul>
 						</div>
 					</div>
@@ -113,58 +112,15 @@
 
 		<div><p>&nbsp;</p></div>
 
-		<div>
-			<div class="crumbs">
-
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
-							<div class="row">
-								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
-									<p>&nbsp;</p>
-								</div>
-								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
-									<div class="content">
-										<h4>[ Massages ]</h4>
-										<h4 style="color: #dac25c">Body Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Swedish Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Shiatsu Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Combination Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Deep Tissue Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Aromatherapy Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Hot Stone Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-											<li>Signature Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-										</ul>
-										<p></p>
-										<h4 style="color: #dac25c">Specific Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Back Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Fountain of Youth Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Hand & Foot Massage with Reflexology <span style="color: #c3a54e">[ 45 / 60 mins ]</span></li>
-											<li>Foot Reflexology <span style="color: #c3a54e">[ 30 / 45 / 60 mins ]</span></li>
-										</ul>
-										<p></p>
-										<p><em>* Private and couple rooms available.</em><br/>
-										<em>* Reflexology is done in a different area.</em></p>
-									</div>
-								</div>
-							</div>
-							<hr>
-						</div>
-						<div class="col-xs-12 col-md-pull-9 col-md-3">
-							<div>
-								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
-								<h4><a href="#">Massages</a></h4>
-								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
-								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
-								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
-							</div>
-						</div>
+		<div class="colorlib-shop">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
+						<h2><span>PRODUCTS</span></h2>
+						<p>All products are 100% cruelty-free, free of harsh chemicals & free from parabens.</p>
 					</div>
 				</div>
+
 			</div>
 		</div>
 
@@ -188,7 +144,7 @@
 						<p>
 						<ul class="colorlib-footer-links">
 							<li><a href="membership.html">Membership</a></li>
-							<li><a href="products.html">Gift Voucher</a></li>
+							<li><a href="#">Gift Voucher</a></li>
 							<li><a href="contact.html">Customer Services</a></li>
 						</ul>
 						</p>
