--- a/services.html
+++ b/services.html
@@ -74,10 +74,10 @@
 								<li><a href="index.html">HOME</a></li>
 								<li><a href="products.html">PRODUCTS</a></li>
 								<li class="has-dropdown active_2">
-									<a href="services.html">SERVICES</a>
+									<a href="#">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
-										<li><a href="#">Massages</a></li>
+										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
@@ -103,7 +103,6 @@
 							<ul class="breadcrumb">
 								<li> Home</li>
 								<li> Services</li>
-								<li> Massages</li>
 							</ul>
 						</div>
 					</div>
@@ -113,55 +112,90 @@
 
 		<div><p>&nbsp;</p></div>
 
-		<div>
-			<div class="crumbs">
-
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
-							<div class="row">
-								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
-									<p>&nbsp;</p>
+		<div class="colorlib-shop">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
+						<h2><span>SERVICES</span></h2>
+						<p>The wide range of services offered at Le Spa Naturel relieves your body of tension, stress, and muscle pains, allowing you to focus on the essentials – listening to your body and improving your well-being.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_packages.html">
+								<div class="product-img" style="background-image: url(images/item-11.jpeg);">
 								</div>
-								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
-									<div class="content">
-										<h4>[ Massages ]</h4>
-										<h4 style="color: #dac25c">Body Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Swedish Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Shiatsu Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Combination Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Deep Tissue Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Aromatherapy Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Hot Stone Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-											<li>Signature Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-										</ul>
-										<p></p>
-										<h4 style="color: #dac25c">Specific Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Back Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Fountain of Youth Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Hand & Foot Massage with Reflexology <span style="color: #c3a54e">[ 45 / 60 mins ]</span></li>
-											<li>Foot Reflexology <span style="color: #c3a54e">[ 30 / 45 / 60 mins ]</span></li>
-										</ul>
-										<p></p>
-										<p><em>* Private and couple rooms available.</em><br/>
-										<em>* Reflexology is done in a different area.</em></p>
-									</div>
+								<div class="desc">
+									<h3>PACKAGES</h3>
 								</div>
-							</div>
-							<hr>
+							</a>
 						</div>
-						<div class="col-xs-12 col-md-pull-9 col-md-3">
-							<div>
-								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
-								<h4><a href="#">Massages</a></h4>
-								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
-								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
-								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
-							</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_massage.html">
+								<div class="product-img" style="background-image: url(images/item-2.jpg);">
+								</div>
+								<div class="desc">
+									<h3>BODY MASSAGE</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_body_scrubs.html">
+								<div class="product-img" style="background-image: url(images/item-4.jpg);">
+								</div>
+								<div class="desc">
+									<h3>BODY SCRUBS</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_body_scrubs.html">
+								<div class="product-img" style="background-image: url(images/item-1.jpg);">
+								</div>
+								<div class="desc">
+									<h3>BODY MASKS</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_nail_services.html">
+								<div class="product-img" style="background-image: url(images/item-3.jpg);">
+								</div>
+								<div class="desc">
+									<h3>NAIL SERVICES</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_footspa.html">
+								<div class="product-img" style="background-image: url(images/item-10.jpg);">
+								</div>
+								<div class="desc">
+									<h3>FOOT SPA PACKAGES</h3>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<a href="services_spa_party.html">
+								<div class="product-img" style="background-image: url(images/item-9.jpg);">
+								</div>
+								<div class="desc">
+									<h3>SPA PARTY</h3>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
