--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
 								<li class="active"><a href="index.html">HOME</a></li>
-								<li><a href="#">PRODUCTS</a></li>
+								<li><a href="products.html">PRODUCTS</a></li>
 								<li class="has-dropdown">
-									<a href="#">SERVICES</a>
+									<a href="services.html">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
@@ -82,8 +82,8 @@
 										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
-								<li><a href="#">PROMO</a></li>
-								<li><a href="#">MEMBERSHIP</a></li>
+								<li><a href="promo.html">PROMO</a></li>
+								<li><a href="membership.html">MEMBERSHIP</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
@@ -139,7 +139,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<a href="shop.html" class="f-product-1" style="background-image: url(images/item-1.jpg);">
+						<a href="services_body_scrubs.html" class="f-product-1" style="background-image: url(images/item-1.jpg);">
 							<div class="desc">
 								<h2>BODY<br>MASK</h2>
 							</div>
@@ -148,21 +148,21 @@
 					<div class="col-md-6">
 						<div class="row">
 							<div class="col-md-6">
-								<a href="" class="f-product-2" style="background-image: url(images/item-2.jpg);">
+								<a href="services_massage.html" class="f-product-2" style="background-image: url(images/item-2.jpg);">
 									<div class="desc">
 										<h2>BODY<br>MASSAGE</h2>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6">
-								<a href="" class="f-product-2" style="background-image: url(images/item-4.jpg);">
+								<a href="services_body_scrubs.html" class="f-product-2" style="background-image: url(images/item-4.jpg);">
 									<div class="desc">
 										<h2>BODY<br>SCRUB</h2>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-12">
-								<a href="" class="f-product-2" style="background-image: url(images/item-3.jpg);">
+								<a href="services_nail_services.html" class="f-product-2" style="background-image: url(images/item-3.jpg);">
 									<div class="desc">
 										<h2>NAIL<br>SERVICES</h2>
 									</div>
@@ -224,7 +224,7 @@
 							</div>
 							<div class="desc">
 								<h3><a href="#">BUY 4, GET 1 FREE ON LE PURIFIANT<br>» HIMALAYAN PINK SALT BODY SCRUB<br>» VOLCANIC MUD BODY MASK<br>» BODY MASSAGE</a></h3>
-								<p class="price"><span>PHP 1,960 (WEEKDAYS)<br>PHP 2,280 (WEEKENDS)</span></p>
+								<p class="price"><span>PHP 1,960 / person (WEEKDAYS)<br>PHP 2,280 / person (WEEKENDS)</span></p>
 							</div>
 						</div>
 					</div>
@@ -281,7 +281,7 @@
 						<h4>Customer Care</h4>
 						<p>
 							<ul class="colorlib-footer-links">
-								<li><a href="#">Membership</a></li>
+								<li><a href="mem">Membership</a></li>
 								<li><a href="#">Gift Voucher</a></li>
 								<li><a href="contact.html">Customer Services</a></li>
 							</ul>
