--- a/promo.html
+++ b/promo.html
@@ -73,18 +73,18 @@
 							<ul>
 								<li><a href="index.html">HOME</a></li>
 								<li><a href="products.html">PRODUCTS</a></li>
-								<li class="has-dropdown active_2">
+								<li class="has-dropdown">
 									<a href="services.html">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
-										<li><a href="#">Massages</a></li>
+										<li><a href="services_massage.html">Massages</a></li>
 										<li><a href="services_body_scrubs.html">Body Scrubs & Body Masks</a></li>
 										<li><a href="services_nail_services.html">Nail Services</a></li>
 										<li><a href="services_footspa.html">Foot Spa Packages</a></li>
 										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
-								<li><a href="promo.html">PROMO</a></li>
+								<li class="active_2"><a href="#">PROMO</a></li>
 								<li><a href="membership.html">MEMBERSHIP</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
@@ -102,8 +102,7 @@
 						<div class="col-xs-12">
 							<ul class="breadcrumb">
 								<li> Home</li>
-								<li> Services</li>
-								<li> Massages</li>
+								<li> Promo</li>
 							</ul>
 						</div>
 					</div>
@@ -113,54 +112,58 @@
 
 		<div><p>&nbsp;</p></div>
 
-		<div>
-			<div class="crumbs">
-
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
-							<div class="row">
-								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-2.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
-									<p>&nbsp;</p>
-								</div>
-								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
-									<div class="content">
-										<h4>[ Massages ]</h4>
-										<h4 style="color: #dac25c">Body Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Swedish Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Shiatsu Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Combination Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Deep Tissue Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Aromatherapy Massage <span style="color: #c3a54e">[ 60 / 90 mins ]</span></li>
-											<li>Hot Stone Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-											<li>Signature Massage <span style="color: #c3a54e">[ 90 mins ]</span></li>
-										</ul>
-										<p></p>
-										<h4 style="color: #dac25c">Specific Massage</h4>
-										<ul class="colorlib-footer-links">
-											<li>Back Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Fountain of Youth Massage <span style="color: #c3a54e">[ 30 / 60 mins ]</span></li>
-											<li>Hand & Foot Massage with Reflexology <span style="color: #c3a54e">[ 45 / 60 mins ]</span></li>
-											<li>Foot Reflexology <span style="color: #c3a54e">[ 30 / 45 / 60 mins ]</span></li>
-										</ul>
-										<p></p>
-										<p><em>* Private and couple rooms available.</em><br/>
-										<em>* Reflexology is done in a different area.</em></p>
-									</div>
-								</div>
+		<div class="colorlib-shop">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
+						<h2><span>PROMOS AND PACKAGES</span></h2>
+						<p>Take advantage of our special promotions to treat yourself and loved ones to a relaxing SPA experience!
+							Everyone deserves a healing, relaxing, stress-relieving massage.<br>
+							Call/text to make an appointment. Blackout dates apply.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/item-5.jpg);">
+								<p class="tag"><span class="new">New</span></p>
 							</div>
-							<hr>
+							<div class="desc">
+								<h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE<br>» 10 MINS HAND MASSAGE</a></h3>
+								<p class="price"><span>PHP 1,080 (WEEKDAYS)<br>PHP 1,180 (WEEKENDS)</span></p>
+							</div>
 						</div>
-						<div class="col-xs-12 col-md-pull-9 col-md-3">
-							<div>
-								<h4><a href="services_packages.html" style="color: black">Packages</a></h4>
-								<h4><a href="#">Massages</a></h4>
-								<h4><a href="services_body_scrubs.html" style="color: black">Body Scrubs & Body Masks</a></h4>
-								<h4><a href="services_nail_services.html" style="color: black">Nail Services</a></h4>
-								<h4><a href="services_footspa.html" style="color: black">Foot Spa Packages</a></h4>
-								<h4><a href="services_spa_party.html" style="color: black">Spa Party</a></h4>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/item-6.jpg);">
+								<p class="tag"><span class="new">New</span></p>
+							</div>
+							<div class="desc">
+								<h3><a href="#">» ORGANIC FOOT SPA TREATMENT <br>» PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY<br>&NonBreakingSpace;</a></h3>
+								<p class="price"><span>PHP 980 (WEEKDAYS)<br>PHP 1,080 (WEEKENDS)</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/item-7.jpg);">
+								<p class="tag"><span class="new">New</span></p>
+							</div>
+							<div class="desc">
+								<h3><a href="#">» COFFEE BODY POLISH <BR>» 10-MINUTES FOUNTAIN OF YOUTH MASSAGE<br>&NonBreakingSpace;</a></h3>
+								<p class="price"><span>PHP 880 (WEEKDAYS)<br>PHP 980 (WEEKENDS)</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/item-8.jpg);">
+								<p class="tag"><span class="new">New</span></p>
+							</div>
+							<div class="desc">
+								<h3><a href="#">BUY 4, GET 1 FREE ON LE PURIFIANT<br>» HIMALAYAN PINK SALT BODY SCRUB<br>» VOLCANIC MUD BODY MASK<br>» BODY MASSAGE</a></h3>
+								<p class="price"><span>PHP 1,960 / person (WEEKDAYS)<br>PHP 2,280 / person (WEEKENDS)</span></p>
 							</div>
 						</div>
 					</div>
