--- a/services_packages.html
+++ b/services_packages.html
@@ -72,9 +72,9 @@
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
 								<li><a href="index.html">HOME</a></li>
-								<li><a href="#">PRODUCTS</a></li>
+								<li><a href="products.html">PRODUCTS</a></li>
 								<li class="has-dropdown active_2">
-									<a href="#">SERVICES</a>
+									<a href="services.html">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="#">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
@@ -84,8 +84,8 @@
 										<li><a href="services_spa_party.html">Spa Party</a></li>
 									</ul>
 								</li>
-								<li><a href="#">PROMO</a></li>
-								<li><a href="#">MEMBERSHIP</a></li>
+								<li><a href="promo.html">PROMO</a></li>
+								<li><a href="membership.html">MEMBERSHIP</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
@@ -121,7 +121,7 @@
 						<div class="col-xs-12 col-md-push-3 col-md-9 content-borderl resizable">
 							<div class="row">
 								<div class="col-xs-12 col-sm-push-6 col-sm-6 featured-image-box">
-									<img width="1079" height="717" src="images/item-4.jpg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
+									<img width="1079" height="717" src="images/item-11.jpeg" class="img-responsive full-width wp-post-image" alt="" sizes="(max-width: 1079px) 100vw, 1079px">
 									<p>&nbsp;</p>
 								</div>
 								<div class="col-xs-12 col-sm-pull-6 col-sm-6">
@@ -245,9 +245,9 @@
 						<h4>Customer Care</h4>
 						<p>
 						<ul class="colorlib-footer-links">
-							<li><a href="#">Membership</a></li>
-							<li><a href="#">Gift Voucher</a></li>
-							<li><a href="#">Customer Services</a></li>
+							<li><a href="membership.html">Membership</a></li>
+							<li><a href="products.html">Gift Voucher</a></li>
+							<li><a href="contact.html">Customer Services</a></li>
 						</ul>
 						</p>
 					</div>
