--- a/services_spa_party.html
+++ b/services_spa_party.html
@@ -72,9 +72,9 @@
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
 								<li><a href="index.html">HOME</a></li>
-								<li><a href="#">PRODUCTS</a></li>
+								<li><a href="products.html">PRODUCTS</a></li>
 								<li class="has-dropdown active_2">
-									<a href="#">SERVICES</a>
+									<a href="services.html">SERVICES</a>
 									<ul class="dropdown">
 										<li><a href="services_packages.html">Packages</a></li>
 										<li><a href="services_massage.html">Massages</a></li>
@@ -84,8 +84,8 @@
 										<li><a href="#">Spa Party</a></li>
 									</ul>
 								</li>
-								<li><a href="#">PROMO</a></li>
-								<li><a href="#">MEMBERSHIP</a></li>
+								<li><a href="promo.html">PROMO</a></li>
+								<li><a href="membership.html">MEMBERSHIP</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 							</ul>
 						</div>
@@ -221,9 +221,9 @@
 						<h4>Customer Care</h4>
 						<p>
 						<ul class="colorlib-footer-links">
-							<li><a href="#">Membership</a></li>
-							<li><a href="#">Gift Voucher</a></li>
-							<li><a href="#">Customer Services</a></li>
+							<li><a href="membership.html">Membership</a></li>
+							<li><a href="products.html">Gift Voucher</a></li>
+							<li><a href="contact.html">Customer Services</a></li>
 						</ul>
 						</p>
 					</div>
