--- a/products.html
+++ b/products.html
@@ -121,6 +121,33 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/bcl_mandarin.png);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>BCL 4-step Luxury Treatment with Argan Oil from Morocco </span></p>
+								<p>Anti-aging and purifying, this simple, complete system deeply moisturizes and rejuvenates skin as it gently reverses the negative effects of sun damage and the aging process.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/bcl_oil.jpg);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>BCL SPA Organic Experience Massage Oil </span></p>
+								<p>
+									This non-greasy, easily absorbed massage oil provides an experience of total relaxation as it soothes away the stresses and tensions of the day. The world’s most precious certified organic ingredients such as essential oils and herbal extracts are blended with the rare and exotic Argan Oil from Morocco to create a purely organic experience in the spa or at home.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
