--- a/promo.html
+++ b/promo.html
@@ -126,7 +126,7 @@
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/item-5.jpg);">
-								<p class="tag"><span class="new">New</span></p>
+								<p class="tag"></p>
 							</div>
 							<div class="desc">
 								<h3><a href="#">» 60-MINUTES AROMATHERAPY MASSAGE<br>» MANICURE<br>» 10 MINS HAND MASSAGE</a></h3>
@@ -137,7 +137,7 @@
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/item-6.jpg);">
-								<p class="tag"><span class="new">New</span></p>
+								<p class="tag"></p>
 							</div>
 							<div class="desc">
 								<h3><a href="#">» ORGANIC FOOT SPA TREATMENT <br>» PEDICURE<br>» 30-MINUTES FOOT REFLEXOLOGY<br>&NonBreakingSpace;</a></h3>
@@ -148,7 +148,7 @@
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/item-7.jpg);">
-								<p class="tag"><span class="new">New</span></p>
+								<p class="tag"></p>
 							</div>
 							<div class="desc">
 								<h3><a href="#">» COFFEE BODY POLISH <BR>» 10-MINUTES FOUNTAIN OF YOUTH MASSAGE<br>&NonBreakingSpace;</a></h3>
@@ -159,7 +159,7 @@
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/item-8.jpg);">
-								<p class="tag"><span class="new">New</span></p>
+								<p class="tag"></p>
 							</div>
 							<div class="desc">
 								<h3><a href="#">BUY 4, GET 1 FREE ON LE PURIFIANT<br>» HIMALAYAN PINK SALT BODY SCRUB<br>» VOLCANIC MUD BODY MASK<br>» BODY MASSAGE</a></h3>
