--- a/products.html
+++ b/products.html
@@ -117,11 +117,25 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
 						<h2><span>PRODUCTS</span></h2>
-						<p>All products are 100% cruelty-free, free of harsh chemicals & free from parabens.</p>
+						<p>All products are 100% cruelty-free, free of harsh chemicals & free from parabens. <br/>Available for purchase in our store.</p>
 					</div>
 				</div>
 
 				<div class="row">
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/YL.jpg);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>Young Living Defense Booster Enrollment Set </span>
+									<span style="color: #c3a54e">[ PHP 7,500 ] </span></p>
+								<p>
+									Young Living Defense Booster Enrollment Set reinforces systemic defenses, creates unfriendly terrain for yeast/fungus, promotes healthy respiratory function, and contains potent essential oils like oregano and Thieves® which are rich in thymol, carvacrol, and eugenol for immune support.
+								</p>
+							</div>
+						</div>
+					</div>
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/products/bcl_mandarin.png);">
@@ -139,13 +153,57 @@
 								<p class="tag"></p>
 							</div>
 							<div class="desc">
-								<p class="price"><span>BCL SPA Organic Experience Massage Oil </span></p>
+								<p class="price"><span>BCL SPA Organic Experience Massage Oil <br/>
+									<span style="color: #c3a54e">[ PHP 780 4oz ] </span></span></p>
 								<p>
 									This non-greasy, easily absorbed massage oil provides an experience of total relaxation as it soothes away the stresses and tensions of the day. The world’s most precious certified organic ingredients such as essential oils and herbal extracts are blended with the rare and exotic Argan Oil from Morocco to create a purely organic experience in the spa or at home.
 								</p>
 							</div>
 						</div>
 					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/qtica_scrub.png);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>Qtica Smart Spa Sugar Scrub<br/>
+									<span style="color: #c3a54e">[ PHP 1,270 7oz ] </span></span></p>
+								<p>
+									This scrub removes dead skin with delicate sugar crystals that dissolve completely to leave behind soothed, softened skin. Perfect for the spa or shower as it doesn't clog drains or whirlpool jets and never leaves difficult-to-clean residue like some scrubs. Great on arms and legs after shaving or waxing, never dries or irritates.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/qtica_lotion.jpg);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>Qtica Smart Spa Lotion - Travel Size<br/>
+									<span style="color: #c3a54e">[ PHP 420 2oz ] </span></span></p>
+								<p>
+									Smart Spa Vanilla Wild Plum Luxury Lotion goes on silky, absorbs quickly and locks in intense hydration and light scent for hours. The unique balance of vitamins, nutrients and essential oils repairs dry or damaged skin and stimulates the senses. The refreshing, invigorating scent of our lotion leaves you citrus-charged and ready to face the day.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/qtica_kit2.jpg);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>Qtica Smart Spa Home Kit<br/>
+									<span style="color: #c3a54e">[ PHP 1,550 ] </span></span></p>
+								<p>
+									Smart Spa's Sugar Scrub, Shower Gel and Luxury Lotion are a must-have combo for your at-home pampering, self care sessions. Perfect for gifts.
+								</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
