--- a/products.html
+++ b/products.html
@@ -124,6 +124,20 @@
 				<div class="row">
 					<div class="col-md-3 text-center">
 						<div class="product-entry">
+							<div class="product-img" style="background-image: url(images/products/gift_voucher.jpg);">
+								<p class="tag"></p>
+							</div>
+							<div class="desc">
+								<p class="price"><span>Gift Voucher </span>
+									<span style="color: #c3a54e">[ Available in denominations of PHP 500 and PHP 1,000 ] </span></p>
+								<p>
+									Give the gift of wellness and relaxation! Our gift vouchers are perfect for all occasions.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="product-entry">
 							<div class="product-img" style="background-image: url(images/products/YL.jpg);">
 								<p class="tag"></p>
 							</div>
