--- a/membership.html
+++ b/membership.html
@@ -119,6 +119,32 @@
 						<h2><span>MEMBERSHIP</span></h2>
 						<p>Our membership cards allow members to enjoy an ultimate pampering experience with special rates for you and your guest.</p>
 					</div>
+
+					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading">
+						<div>
+							<h4>[ Massage Only ]</h4>
+							<h4 style="color: #c3a54e">PHP 8,950</h4>
+								20% off Massage Services<br/>
+								20% off Guest Pass Once a Month<br/>
+								PHP 4,000 worth of Gift Vouchers<br/>
+								1-hr Complimentary Massage on your Birthday<br/>
+
+							<p>&nbsp;</p>
+							<p>&nbsp;</p>
+
+							<h4>[ Massage and Nail Services ]</h4>
+							<h4 style="color: #c3a54e">PHP 13,950</h4>
+
+								20% off Massage and Nail Services<br/>
+								20% off Guest Pass Once a Month<br/>
+								PHP 5,000 worth of Gift Vouchers<br/>
+								1-hr Complimentary Massage and Gel Manicure on your Birthday<br/>
+
+							<p></p>
+							<p><em>* 6 Months Membership Period.</em></p>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
