--- a/membership.html
+++ b/membership.html
@@ -129,7 +129,9 @@
 								PHP 4,000 worth of Gift Vouchers<br/>
 								1-hr Complimentary Massage on your Birthday<br/>
 
-							<p>&nbsp;</p>
+							<p></p>
+							<p><em>* 6 Months Membership Period.</em></p>
+
 							<p>&nbsp;</p>
 
 							<h4>[ Massage and Nail Services ]</h4>
