--- a/membership.html
+++ b/membership.html
@@ -134,10 +134,10 @@
 
 							<p>&nbsp;</p>
 
-							<h4>[ Massage and Nail Services ]</h4>
+							<h4>[ All Services ]</h4>
 							<h4 style="color: #c3a54e">PHP 13,950</h4>
 
-								20% off Massage and Nail Services<br/>
+								20% off All Services<br/>
 								20% off Guest Pass Once a Month<br/>
 								PHP 5,000 worth of Gift Vouchers<br/>
 								1-hr Complimentary Massage and Gel Manicure on your Birthday<br/>
