--- a/products.html
+++ b/products.html
@@ -131,7 +131,7 @@
 								<p class="price"><span>Gift Voucher </span>
 									<span style="color: #c3a54e">[ Available in denominations of PHP 500 and PHP 1,000 ] </span></p>
 								<p>
-									Give the gift of wellness and relaxation! Our gift vouchers are perfect for all occasions.
+									Give the gift of wellness and relaxation! Our gift vouchers are perfect for all occasions. <br/>(Birthday, Teacher's Day, Mother's Day, Father's Day, Valentine's Day, etc.)
 								</p>
 							</div>
 						</div>
