--- a/services_nail_services_orig.html
+++ b/services_nail_services_orig.html
@@ -144,14 +144,14 @@
 										GEL OMBRE<br/>
 										GEL POLISH REMOVAL<br/>
 
-										<!--p></p>
+										<p></p>
 										<span style="color: #c3a54e">NAIL EXTENSION</span><br/>
 										VIRTUAL NAILS<br/>
 										DIP POWDER MANICURE (WITH NAIL TIPS)<br/>
 										DIP POWDER MANICURE<br/>
 										DIP POWDER FRENCH TIP<br/>
 										DIP POWDER OMBRE<br/>
-										ACRYLIC DIP POWDER REMOVAL<br/-->
+										ACRYLIC DIP POWDER REMOVAL<br/>
 
 										<p></p>
 										<span style="color: #c3a54e">PARAFFIN TREATMENT</span><br/>
